1) Modified the view template to keep the previous search field selected when displaying results. 2) capitalized field names in the tables. 3) In the search results listing and the listing of all jobs, made each value hyperlinked to the listing of all jobs with that value,

--- a/src/main/resources/templates/list-column.html
+++ b/src/main/resources/templates/list-column.html
@@ -12,9 +12,10 @@
 
     <div th:if="${items} and ${items.size()}">
 
-        <table>
+        <table class="job-listing">
             <tr th:each="item, idx : ${items}" th:class="${idx.odd} ? 'odd'">
-                <td><a th:href="@{/list/jobs(column=${column},value=${item})}" th:text="${item}"></a></td>
+                <!--<td><a th:href="@{/list/jobs(column=${column},value=${item})}" th:text="${item}"></a></td>-->
+                <td><a th:href="@{/list/jobs(column=${column},value=${item})}" th:text="${#strings.capitalizeWords(item)}"></a></td>
             </tr>
         </table>
 
