--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -13,8 +13,9 @@
     <!-- TODO #3 - Use the same list display from search.html -->
 
     <div th:if="${jobs} and ${jobs.size()}">
+        <h1 th:text="${jobs.size()}"></h1> <h1>Result(s)</h1>
 
-        <table>
+        <table class="job-listing">
             <tr>
             <td> Position Type</td>
             <td>Name</td>
@@ -25,7 +26,8 @@
             <tr th:each="job, idx : ${jobs}" th:class="${idx.odd} ? 'odd'">
                 <!--working<td th:text="${job}"></td>-->
                <!--working <td th:text="${job.name}"></td>-->
-                <td th:each="field: ${job}" th:text="${field.value}"></td>
+               <!--<td th:each="field: ${job}" th:text="${field.value}"></td>-->
+                <td th:each="field: ${job}" th:text="${#strings.capitalizeWords(field.value)}"></td>
             </tr>
         </table>
 
