--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -40,10 +40,11 @@
     <hr />
 
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
-    <h1  th:if="${jobs.size()>=0}"
-         th:text="${jobs.size()}"></h1> <h1>Result(s)</h1>
+    <div th:if="${jobs} and ${jobs.size()>=0}">
+        <h1 th:text="${jobs.size()}" ></h1> <h1>Result(s)</h1>
+    </div>
+
     <div th:if="${jobs} and ${jobs.size()}">
-       <!-- <h1 th:text="${jobs.size()}"></h1> <h1>Result(s)</h1>-->
         <table class="job-listing">
             <tr>
                 <td> Position Type</td>
